--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "nodemon": "^3.1.0",
-    "uuid": "^9.0.1"
+    "nodemon": "^3.1.0"
   }
 }
